Update become-a-host link

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -47619,7 +47619,7 @@ tr.show-desktop {
   background: #000 !important;
   opacity: 0.2 !important;
 }
-._q6zl6 {
+.relative-opacity {
   position: relative !important;
   opacity: 1 !important;
 }
