--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -60573,7 +60573,7 @@ label {
     overflow: clip !important;
   }
 }
-._le6wlg {
+.section-container {
   -webkit-box-lines: multiple !important;
   -webkit-box-pack: start !important;
   -ms-flex-pack: start !important;
@@ -60598,7 +60598,7 @@ label {
   margin-right: 0 !important;
 }
 @media (min-width: 375px) {
-  ._le6wlg {
+  .section-container {
     padding-left: var(--gp-padding-smallAndAbove, 24px) !important;
     padding-right: var(--gp-padding-smallAndAbove, 24px) !important;
   }
