_1yqbv3i -> page-shell__menu-item-text

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60556,7 +60556,7 @@ label {
   color: #b0b0b0 !important;
   position: relative !important;
 }
-._1yqbv3i {
+.page-shell__menu-item-text {
   font-size: 10px !important;
   line-height: 12px !important;
   overflow: hidden !important;
@@ -60569,7 +60569,7 @@ label {
   color: #717171 !important;
 }
 @supports (overflow: clip) {
-  ._1yqbv3i {
+  .page-shell__menu-item-text {
     overflow: clip !important;
   }
 }
