_tbbnrnx -> page-shell__menu-item-icon-wrapper

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60536,7 +60536,7 @@ label {
   hyphens: auto !important;
   padding: 0 2px !important;
 }
-._tbbnrnx {
+.page-shell__menu-item-icon-wrapper {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   -webkit-box-pack: center !important;
