--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4891,6 +4891,9 @@ select[disabled] {
 .pointer-events-none{
   pointer-events: none;
 }
+.mb-6	{
+  margin-bottom: 1.5rem; /* 24px */
+}
 /* /Utilities */
 
 /* Footer */
