--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -60503,7 +60503,7 @@ label {
   margin: 0 auto !important;
   max-width: 560px !important;
 }
-._45o9ez {
+.page-shell__menu-item {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   -webkit-box-direction: normal !important;
