_h0klba -> page-shell__menu

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60483,7 +60483,7 @@ label {
     background-color: var(--header_brand-color, var(--ihf-tp-q)) !important;
   }
 }
-._h0klba {
+.page-shell__menu {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-align: start !important;
