--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60428,7 +60428,7 @@ label {
   align-items: center !important;
   justify-content: center !important;
 }
-._91slf2a {
+.lite-image__default-static {
   top: 0 !important;
   bottom: 0 !important;
   left: 0 !important;
@@ -60438,7 +60438,7 @@ label {
   position: absolute !important;
 }
 @supports (object-fit: cover) {
-  ._91slf2a {
+  .lite-image__default-static {
     height: 100% !important;
     width: 100% !important;
     position: static !important;
