mq5rv0q -> max__width

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60276,7 +60276,7 @@ label {
   margin-left: auto;
   margin-right: auto;
 }
-.mq5rv0q[class][class] {
+.max__width[class][class] {
   max-width: var(--gp-section-max-width, var(--maxWidth));
 }
 @keyframes animation-64e8c8 {
