rename page.css 1

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -94,36 +94,36 @@
   margin-top: 16px !important;
   margin-bottom: 40px !important;
 }
-._kf8u9f {
+.account-container {
   margin: 0 auto !important;
   width: auto !important;
   padding: 0 24px !important;
 }
 @media (min-width: 744px) {
-  ._kf8u9f {
+  .account-container {
     max-width: 696px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._kf8u9f {
+  .account-container {
     max-width: 1080px !important;
   }
 }
 .text-center {
   text-align: center !important;
 }
-._101jwz9 {
+.account-container__deactivate {
   font-size: 14px !important;
   line-height: 18px !important;
   font-weight: 400 !important;
   color: #000 !important;
 }
-._bljx26 {
+.account-container__header-wrapper {
   margin-top: 64px !important;
   margin-bottom: 56px !important;
   margin-left: 16px !important;
 }
-._1mwv5e5 {
+.account-container__header-desc {
   font-size: 18px !important;
   line-height: 24px !important;
   font-weight: 400 !important;
@@ -132,7 +132,7 @@
   margin-bottom: 16px !important;
 }
 @media (min-width: 744px) {
-  ._hq87c8 {
+  .account-container__menu {
     -webkit-box-lines: multiple !important;
     display: -webkit-box !important;
     display: -moz-box !important;
@@ -145,7 +145,7 @@
   }
 }
 @media (min-width: 744px) {
-  ._15wuypg {
+  .account-container__menu-list {
     display: -webkit-box !important;
     display: -moz-box !important;
     display: -ms-flexbox !important;
@@ -155,12 +155,12 @@
   }
 }
 @media (min-width: 1440px) {
-  ._1g05mp0x {
+  .account-container__menu-wrapper {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
-._1obfcljv {
+.account-container__menu-list-wrapper {
   position: relative !important;
   width: 100% !important;
   margin-left: 0 !important;
@@ -169,38 +169,38 @@
   padding-right: 6px !important;
 }
 @media (min-width: 375px) {
-  ._1obfcljv {
+  .account-container__menu-list-wrapper {
     width: 50% !important;
     padding-left: 6px !important;
     padding-right: 6px !important;
   }
 }
 @media (min-width: 744px) {
-  ._1obfcljv {
+  .account-container__menu-list-wrapper {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 950px) {
-  ._1obfcljv {
+  .account-container__menu-list-wrapper {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._1obfcljv {
+  .account-container__menu-list-wrapper {
     width: 33.33333333333333% !important;
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 1440px) {
-  ._1obfcljv {
+  .account-container__menu-list-wrapper {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
-._1uwb2q9 {
+.account-container__menu-list-card {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
   -webkit-box-direction: normal !important;
@@ -223,7 +223,7 @@
   border-radius: 12px !important;
   text-decoration: none !important;
 }
-._4i4nwv {
+.account-container__menu-card-title {
   font-size: 16px !important;
   line-height: 20px !important;
   color: #222 !important;
@@ -231,10 +231,10 @@
   height: auto !important;
   margin-bottom: 8px !important;
 }
-._1j3tda {
+.account-container-mb__header {
   padding-top: 36px !important;
 }
-._r6giuw {
+.account-container-mb__header-profile {
   background-color: #ddd !important;
   border-radius: 50% !important;
   border-width: 2px !important;
@@ -244,7 +244,7 @@
   overflow: hidden !important;
   display: block !important;
 }
-._1aflf3g {
+.account-container-mb__header-text {
   font-size: 32px !important;
   line-height: 36px !important;
   font-weight: 600 !important;
@@ -252,18 +252,18 @@
   contain: paint !important;
   margin-bottom: 8px !important;
 }
-._1v1onhz {
+.account-container-mb__header-show-text {
   font-size: 14px !important;
   line-height: 18px !important;
   font-weight: 600 !important;
   color: #222 !important;
 }
-._a8enjp {
+.account-container-mb__menu-wrapper {
   border-bottom: 1px solid #ebebeb !important;
   color: #222 !important;
   padding-bottom: 16px !important;
 }
-._8usbuq {
+.account-container-mb__menu-header-h1 {
   font-size: 22px !important;
   line-height: 26px !important;
   font-weight: 600 !important;
@@ -277,7 +277,7 @@
 .tab__content-wrapper {
   min-height: 500px !important;
 }
-._26piifo {
+.notification__container-join {
   margin: 0 !important;
   word-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -522,7 +522,7 @@
   margin-top: 8px !important;
   margin-bottom: 24px !important;
 }
-._ob4m31y {
+.hero-banner__form-btn {
   cursor: default !important;
   display: inline-block !important;
   margin: 0 !important;
@@ -550,7 +550,7 @@
   color: #fff !important;
 }
 @supports (--custom: properties) {
-  ._ob4m31y {
+  .hero-banner__form-btn {
     border-radius: var(--border-button-border-radius, 4px) !important;
     font-size: var(--font-button-font-size, 16px) !important;
     line-height: var(--font-button-line-height, 24px) !important;
@@ -577,13 +577,13 @@
     color: var(--color-buttons-default-text, #fff) !important;
   }
 }
-._ob4m31y:disabled {
+.hero-banner__form-btn:disabled {
   background: rgba(0, 132, 137, 0.3) !important;
   border-color: transparent !important;
   color: #fff !important;
 }
 @supports (--custom: properties) {
-  ._ob4m31y:disabled {
+  .hero-banner__form-btn:disabled {
     background: var(
       --color-buttons-default-disabled-color,
       rgba(0, 132, 137, 0.3)
@@ -666,13 +666,13 @@
   position: absolute !important;
   left: 9px !important;
 }
-.main_content__calendar-container {
+.main-content__calendar-container {
   background: #fff !important;
   text-align: center !important;
   vertical-align: top !important;
   user-select: none !important;
 }
-._gucugi {
+.main-content__calendar-spacer-wrapper {
   color: #484848 !important;
   font-size: 18px !important;
   text-align: center !important;
@@ -680,7 +680,7 @@
   padding-bottom: 37px !important;
   caption-side: initial !important;
 }
-._nm3mze {
+.main-content__calendar-spacer {
   padding-bottom: 32px !important;
   padding-top: 0 !important;
 }
@@ -694,11 +694,11 @@
   font-size: 14px !important;
   text-align: center !important;
 }
-._1aqszpf {
+.main-content__calendar-day-icon {
   position: absolute !important;
   top: 18px !important;
 }
-._1naxf6gm {
+.hero-banner__content-day-active {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   -webkit-box-pack: center !important;
@@ -1022,7 +1022,7 @@
   font-size: 12px !important;
   line-height: 16px !important;
 }
-._1fq2b5e {
+.main_content__details-group-note {
   margin-top: 8px !important;
   margin-bottom: -8px !important;
   font-weight: 400 !important;
@@ -1162,7 +1162,7 @@
   border-style: solid !important;
   border-color: transparent transparent transparent #ebebeb !important;
 }
-._1skxaokw {
+.calendar-section__month-time-content {
   -webkit-box-pack: justify !important;
   font-size: 12px !important;
   line-height: 16px !important;
@@ -1484,7 +1484,7 @@
 .calendar-section__month-day-event-icon-wrapper {
   padding-left: 6px !important;
 }
-._z3inzmm {
+.calendar-section__month-day-active {
   -webkit-box-align: center !important;
   -webkit-box-pack: center !important;
   width: 28px !important;
@@ -1711,7 +1711,7 @@
     display: flex !important;
   }
 }
-._1fvtq1g {
+.calendar-section__prevoius-month {
   margin-left: 12px !important;
   margin-right: 12px !important;
 }
@@ -1721,7 +1721,7 @@
   display: none !important;
   margin-left: 24px !important;
 }
-._eqdsxkm {
+.main_content__date-categories-btn {
   border: 1px solid #717171 !important;
   border-radius: 8px 0 0 8px !important;
   line-height: 18 !important;
@@ -14174,7 +14174,7 @@ h3:first-child {
   padding-right: 4px !important;
   display: inline-block !important;
 }
-._u1thwpg {
+.account-container-mb__menu-btn {
   font-size: inherit !important;
   font-family: inherit !important;
   font-weight: inherit !important;
@@ -19804,7 +19804,7 @@ h3:first-child {
   line-height: 24px !important;
   color: #717171 !important;
 }
-._oyq8vf {
+.account-container-mb__menu-icon {
   -webkit-box-align: center !important;
   min-height: 20px !important;
   display: flex !important;
@@ -20811,7 +20811,7 @@ full__margin-bottom {
   color: #222 !important;
   font-weight: 400 !important;
 }
-._1c02cnn {
+.account-container__menu-card-desc {
   font-size: 14px !important;
   line-height: 18px !important;
   color: #717171 !important;
@@ -21124,7 +21124,7 @@ full__margin-bottom {
     margin-bottom: 64px !important;
   }
 }
-._oyq8vf {
+.account-container-mb__menu-icon {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   min-height: 20px !important;
@@ -21220,14 +21220,14 @@ full__margin-bottom {
 .dir.atm_5j_mlmjl2 {
   border-radius: var(--h-l-f-om-o);
 }
-.dir.c3dtyuj[class][class] {
+.dir.account-container-mb__header-wrapper[class][class] {
   padding-top: var(--b-y-unon);
   padding-bottom: var(--ic-zlb-s);
   padding-left: var(--ic-zlb-s);
   padding-right: var(--ic-zlb-s);
 }
 @media (min-width: 744px) {
-  .dir.c3dtyuj[class][class] {
+  .dir.account-container-mb__header-wrapper[class][class] {
     padding-left: 0;
     padding-right: 0;
   }
@@ -24087,7 +24087,7 @@ html :where(img[class*='wp-image-']) {
   min-height: 20px !important;
   text-align: left !important;
 }
-._ggw68c {
+.account-container-mb__menu-arrow {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   margin-left: 4px !important;
@@ -24100,7 +24100,7 @@ html :where(img[class*='wp-image-']) {
   -webkit-align-items: center !important;
   align-items: center !important;
 }
-._u1thwpg {
+.account-container-mb__menu-btn {
   font-size: inherit !important;
   font-family: inherit !important;
   font-weight: inherit !important;
@@ -24123,18 +24123,18 @@ html :where(img[class*='wp-image-']) {
   text-decoration: none !important;
   outline: 0 !important;
 }
-._u1thwpg::-moz-focus-inner {
+.account-container-mb__menu-btn::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._u1thwpg:focus::-moz-focus-inner {
+.account-container-mb__menu-btn:focus::-moz-focus-inner {
   border: none !important;
 }
-._u1thwpg:-moz-focusring {
+.account-container-mb__menu-btn:-moz-focusring {
   outline: 0 !important;
 }
-._u1thwpg:focus-visible {
+.account-container-mb__menu-btn:focus-visible {
   color: #222 !important;
   border-radius: 4px !important;
   -webkit-transition: box-shadow 0.2s !important;
@@ -24143,13 +24143,13 @@ html :where(img[class*='wp-image-']) {
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._u1thwpg:focus-visible {
+  .account-container-mb__menu-btn:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._u1thwpg:focus[data-focus-visible-added] {
+.account-container-mb__menu-btn:focus[data-focus-visible-added] {
   color: #222 !important;
   border-radius: 4px !important;
   -webkit-transition: box-shadow 0.2s !important;
@@ -24158,31 +24158,31 @@ html :where(img[class*='wp-image-']) {
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._u1thwpg:focus[data-focus-visible-added] {
+  .account-container-mb__menu-btn:focus[data-focus-visible-added] {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
 @media (hover: hover) {
-  ._u1thwpg:hover {
+  .account-container-mb__menu-btn:hover {
     cursor: pointer !important;
     color: #222 !important;
     text-decoration: none !important;
   }
 }
-._u1thwpg:active,
-._u1thwpg:focus {
+.account-container-mb__menu-btn:active,
+.account-container-mb__menu-btn:focus {
   color: #222 !important;
   text-decoration: none !important;
 }
-._u1thwpg:disabled {
+.account-container-mb__menu-btn:disabled {
   cursor: not-allowed !important;
   color: #ddd !important;
   text-decoration: none !important;
 }
 @media (hover: hover) {
-  ._u1thwpg:disabled:hover {
+  .account-container-mb__menu-btn:disabled:hover {
     text-decoration: none !important;
   }
 }
@@ -31793,7 +31793,7 @@ tr.show-desktop {
   color: #717171 !important;
   word-break: break-word !important;
 }
-._1g05mp0x {
+.account-container__menu-wrapper {
   position: relative !important;
   width: 100% !important;
   margin-left: 0 !important;
@@ -31802,25 +31802,25 @@ tr.show-desktop {
   padding-right: 6px !important;
 }
 @media (min-width: 375px) {
-  ._1g05mp0x {
+  .account-container__menu-wrapper {
     padding-left: 6px !important;
     padding-right: 6px !important;
   }
 }
 @media (min-width: 744px) {
-  ._1g05mp0x {
+  .account-container__menu-wrapper {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 950px) {
-  ._1g05mp0x {
+  .account-container__menu-wrapper {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._1g05mp0x {
+  .account-container__menu-wrapper {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
@@ -37475,24 +37475,24 @@ tr.show-desktop {
 ._18vcxek {
   min-height: 550px !important;
 }
-.dir.c3dtyuj[class][class] {
+.dir.account-container-mb__header-wrapper[class][class] {
   padding-top: var(--b-y-unon);
   padding-bottom: var(--ic-zlb-s);
 }
-.dir-ltr.c3dtyuj[class][class] {
+.dir-ltr.account-container-mb__header-wrapper[class][class] {
   padding-left: var(--ic-zlb-s);
   padding-right: var(--ic-zlb-s);
 }
-.dir-rtl.c3dtyuj[class][class] {
+.dir-rtl.account-container-mb__header-wrapper[class][class] {
   padding-right: var(--ic-zlb-s);
   padding-left: var(--ic-zlb-s);
 }
 @media (min-width: 744px) {
-  .dir-ltr.c3dtyuj[class][class] {
+  .dir-ltr.account-container-mb__header-wrapper[class][class] {
     padding-left: 0;
     padding-right: 0;
   }
-  .dir-rtl.c3dtyuj[class][class] {
+  .dir-rtl.account-container-mb__header-wrapper[class][class] {
     padding-right: 0;
     padding-left: 0;
   }
@@ -43906,7 +43906,7 @@ tr.show-desktop {
     margin-right: -8px !important;
   }
 }
-._1byskwn {
+.account-container__menu-container {
   -webkit-box-lines: multiple !important;
   -webkit-box-pack: start !important;
   -ms-flex-pack: start !important;
@@ -43931,7 +43931,7 @@ tr.show-desktop {
   margin-right: -6px !important;
 }
 @media (min-width: 375px) {
-  ._1byskwn {
+  .account-container__menu-container {
     margin-left: -6px !important;
     margin-right: -6px !important;
     width: -webkit-calc(100% + 12px) !important;
@@ -43940,7 +43940,7 @@ tr.show-desktop {
   }
 }
 @media (min-width: 744px) {
-  ._1byskwn {
+  .account-container__menu-container {
     margin-left: -8px !important;
     margin-right: -8px !important;
     width: -webkit-calc(100% + 16px) !important;
@@ -43949,7 +43949,7 @@ tr.show-desktop {
   }
 }
 @media (min-width: 950px) {
-  ._1byskwn {
+  .account-container__menu-container {
     margin-left: -8px !important;
     margin-right: -8px !important;
     width: -webkit-calc(100% + 16px) !important;
@@ -43958,7 +43958,7 @@ tr.show-desktop {
   }
 }
 @media (min-width: 1128px) {
-  ._1byskwn {
+  .account-container__menu-container {
     margin-left: -8px !important;
     margin-right: -8px !important;
     width: -webkit-calc(100% + 16px) !important;
@@ -43967,7 +43967,7 @@ tr.show-desktop {
   }
 }
 @media (min-width: 1440px) {
-  ._1byskwn {
+  .account-container__menu-container {
     margin-left: -8px !important;
     margin-right: -8px !important;
     width: -webkit-calc(100% + 16px) !important;
@@ -47820,7 +47820,7 @@ tr.show-desktop {
   font-weight: 800 !important;
 }
 @media (min-width: 744px) {
-  ._hq87c8 {
+  .account-container__menu {
     display: flex !important;
     flex-wrap: wrap !important;
   }
@@ -48865,7 +48865,7 @@ tr.show-desktop {
     background-image: none !important;
   }
 }
-._1byskwn {
+.account-container__menu-container {
   -webkit-box-pack: start !important;
   -webkit-box-align: stretch !important;
   display: flex !important;
@@ -48877,35 +48877,35 @@ tr.show-desktop {
   margin-right: -6px !important;
 }
 @media (min-width: 375px) {
-  ._1byskwn {
+  .account-container__menu-container {
     margin-left: -6px !important;
     margin-right: -6px !important;
     width: calc(100% + 12px) !important;
   }
 }
 @media (min-width: 744px) {
-  ._1byskwn {
+  .account-container__menu-container {
     margin-left: -8px !important;
     margin-right: -8px !important;
     width: calc(100% + 16px) !important;
   }
 }
 @media (min-width: 950px) {
-  ._1byskwn {
+  .account-container__menu-container {
     margin-left: -8px !important;
     margin-right: -8px !important;
     width: calc(100% + 16px) !important;
   }
 }
 @media (min-width: 1128px) {
-  ._1byskwn {
+  .account-container__menu-container {
     margin-left: -8px !important;
     margin-right: -8px !important;
     width: calc(100% + 16px) !important;
   }
 }
 @media (min-width: 1440px) {
-  ._1byskwn {
+  .account-container__menu-container {
     margin-left: -8px !important;
     margin-right: -8px !important;
     width: calc(100% + 16px) !important;
@@ -49318,7 +49318,7 @@ textarea {
   font-weight: 400 !important;
   color: #222 !important;
 }
-._18dgbyf {
+.account-container-mb__header-profile-wrapper {
   margin-bottom: 16px !important;
 }
 ._yv33y4 {
@@ -49453,7 +49453,7 @@ textarea {
   flex-wrap: wrap !important;
   box-shadow: rgb(34 34 34) 0 0 0 2px !important;
 }
-._1epbewz {
+.account-container-mb__header-show-more {
   font-size: 18px !important;
   line-height: 24px !important;
   font-weight: 400 !important;
@@ -52285,7 +52285,7 @@ a:hover {
 .cursor-pointer {
   cursor: pointer !important;
 }
-._u1thwpg {
+.account-container-mb__menu-btn {
   font-size: inherit !important;
   font-family: inherit !important;
   font-weight: inherit !important;
@@ -52303,7 +52303,7 @@ a:hover {
   text-decoration: none !important;
   outline: 0 !important;
 }
-._rortwiu {
+.account-container-mb__menu-btn-wrapper {
   -webkit-box-pack: justify !important;
   -webkit-box-align: start !important;
   display: inline-flex !important;
@@ -52313,7 +52313,7 @@ a:hover {
   text-align: left !important;
   justify-content: space-between !important;
 }
-._ggw68c {
+.account-container-mb__menu-arrow {
   -webkit-box-align: center !important;
   margin-left: 4px !important;
   min-height: 20px !important;
