--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,7 +1,7 @@
 ._1mqc21n {
   margin-left: 16px!important
 }
-._18dgbyf,
+.account-container-mb__header-profile-wrapper,
 .mb2 {
   margin-bottom: 16px!important
 }
