rename page.css 1

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13584,7 +13584,7 @@ fieldset[disabled] .btn {
 ._1mqc21n {
   margin-left: 16px!important
 }
-._18dgbyf,
+.account-container-mb__header-profile-wrapper,
 .mb2 {
   margin-bottom: 16px!important
 }
