rename page.css 4

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -36,7 +36,7 @@
   display: none!important
 }
 @media (min-width:375px) {
-  ._1vj8vki {
+  .inspiration-container__carousel-content-overlay {
     display: none!important
   }
 }
