--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13619,7 +13619,7 @@ fieldset[disabled] .btn {
   display: none!important
 }
 @media (min-width:375px) {
-  ._1vj8vki {
+  .inspiration-container__carousel-content-overlay {
     display: none!important
   }
 }
